finished card styles

--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,22 @@ body {
   --poppins: "Poppins", sans-serif;
 }
 
+.red {
+  background-color: red;
+}
+
+.cyan {
+  background-color: var(--cyan);
+}
+
+.yellow {
+  background-color: var(--orange);
+}
+
+.blue {
+  background-color: var(--blue);
+}
+
 h1 {
   font-family: var(--poppins);
   text-align: center;
@@ -82,18 +98,22 @@ h1 + p {
   font-family: var(--poppins);
   width: 400px;
   height: 230px;
-  padding: 2rem 2rem;
   border-radius: 7px;
   position: relative;
+  box-shadow: 0px 0px 20px 5px hsl(0, 0%, 95%);
+  overflow: hidden;
+}
+
+.card .content {
+  padding: 2rem 2rem;
 }
 
 .line {
-  position: relative;
+  position: absolute;
+  display: block;
   top: 0;
-  overflow: hidden;
-  border-radius: 7px;
-  background-color: red;
-  height: 20px;
+  left: 0;
+  height: 4px;
   width: 100%;
 }
 .card h3 {
