started mobile view

--- a/styles.css
+++ b/styles.css
@@ -137,3 +137,21 @@ h1 + p {
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
+
+@media screen and (max-width: 767px){
+  h1 + p {
+    margin-top: 1rem;
+    margin-bottom: 5rem;
+  }
+  .card-container {
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+    margin-left: 0;
+  }
+  .card {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
