--- a/styles.css
+++ b/styles.css
@@ -153,5 +153,10 @@ h1 + p {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 0px 0px 12px 6px hsl(0, 0%, 91%);
   }
 }
+
+/* @media screen and (max-width: 575px) {
+
+} */
