--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,8 @@ h1 + p {
 }
 .card {
   font-family: var(--poppins);
-  width: 400px;
+  max-width: 400px;
+  width: 100%;
   height: 260px;
   border-radius: 7px;
   position: relative;
@@ -151,7 +152,7 @@ footer {
 @media screen and (min-width: 992px) {
   .card-container {
     height: 500px;
-    width: 80%;
+    width: 100%;
     margin-top: 4rem;
     margin-left: auto;
     margin-right: auto;
@@ -200,7 +201,13 @@ footer {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1300px) {
+  .card-container {
+    grid-template-columns: repeat(3, 250px);
+  }
+}
+
+@media screen and (max-width: 991px) {
   h1 + p {
     margin-top: 1rem;
     margin-bottom: 5rem;
